# data_eng_test

./: .dockerignore  DOCKER.md  db.py  docker-commands.sh  docker-compose.yml  init-db.sql  main.py  pyproject.toml  settings.py
api/: .coverage  Dockerfile  auth.py  db.py  main.py  pyproject.toml  run_tests.py  settings.py
api/dtos/: data.py
api/mappers/: data.py
api/models/: create_api_key.py  create_tables.py  create_user.py  data.py
api/routes/: auth.py  data.py
api/services/: data_service.py  user_service.py
api/tests/: README.md  conftest.py  test_auth.py  test_auth_automated.py  test_main.py  test_models.py
dtos/: data.py
etl/: .coverage  Dockerfile  db.py  main.py  pyproject.toml  settings.py
etl/dtos/: data.py
etl/mappers/: data.py
etl/models/: create_tables.py  data.py  populate_signals.py
etl/services/: __init__.py  base.py  data_service.py  signal_service.py
etl/tests/: README.md  conftest.py  test_database.py  test_etl.py  test_models.py  test_scripts.py  test_services.py
mappers/: data.py
routes/: data.py
tests/: test_main.py
