[project]
name = "teste-data-eng"
version = "0.1.0"
description = "Projeto completo de Data Engineering com API e ETL"
readme = "README.md"
requires-python = ">=3.12"

# Dependências compartilhadas entre todos os componentes
dependencies = [
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
    "ipykernel>=6.30.1",
]

# Workspace configuration
[tool.uv.workspace]
members = ["api", "etl"]
