[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "pytest>=8.4.2",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.25.0",
    "pytest-cov>=7.0.0",
    "psycopg2-binary>=2.9.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
